--- a/frontend/nick-derobertis-site/src/styles.scss
+++ b/frontend/nick-derobertis-site/src/styles.scss
@@ -993,3 +993,20 @@ button.header-btn {
     width: unset;
   }
 }
+
+.timeline-widget-container {
+  border-radius: 70px;
+  padding: 2rem;
+
+  @include media-breakpoint-up(md) {
+    padding: 3rem;
+  }
+}
+
+.timeline-filters-container {
+  justify-content: space-around;
+
+  @include media-breakpoint-up(md) {
+    justify-content: unset;
+  }
+}
