Make description area of timeline widget into a card itself

--- a/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
@@ -40,7 +40,7 @@
         [height]="model.chartHeight"
         (mouseover)="onMouseOver($event)"
       ></google-chart>
-      <div *ngIf="selectedModel">
+      <div class="card shadow-lg description-card" *ngIf="selectedModel">
         <h5>{{ selectedModel.organization }}</h5>
         <h6>{{ selectedModel.role }}</h6>
         <div>
