Make switching between short and long versions of names dynamic, works when resizing page

--- a/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
@@ -42,6 +42,7 @@
         [dynamicResize]="true"
         [height]="model.chartHeight"
         (mouseover)="onMouseOver($event)"
+        (ready)="onChartReady()"
       ></google-chart>
       <div
         class="card shadow-lg description-card"
