--- a/frontend/nick-derobertis-site/src/app/global/components/loading-spinner/loading-spinner.component.html
+++ b/frontend/nick-derobertis-site/src/app/global/components/loading-spinner/loading-spinner.component.html
@@ -1,3 +1,3 @@
-<div class="background-loader-container d-flex align-items-center">
-  <div class="loader">Loading...</div>
+<div class="d-flex align-items-center">
+  <div class="loader" [ngStyle]="{ 'font-size': fontSize }">Loading...</div>
 </div>
