--- a/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.scss
+++ b/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.scss
@@ -4,12 +4,18 @@ google-chart {
 
 .filters-description-wrapper {
   margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+  margin-left: 1rem;
 }
 
 .checkbox-wrapper {
   padding-right: 0.75rem;
   padding-left: 0.75rem;
-  display: inline-block;
+  padding-top: 0.7rem;
+
+  @media (max-width: 420px) {
+    display: inline-block;
+  }
 }
 
 .checkbox-wrapper input {
@@ -18,6 +24,7 @@ google-chart {
 
 .checkbox-container {
   text-align: center;
+  margin-top: 0.5rem;
 }
 
 .description-card {
