Polish padding for timeline description card

--- a/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
@@ -45,7 +45,7 @@
         (ready)="onChartReady()"
       ></google-chart>
       <div
-        class="card shadow-lg description-card"
+        class="card shadow-lg timeline-description-card"
         *ngIf="selectedModel"
         [ngStyle]="{
           'background-color': selectedModel.colorPair.background,
