--- a/frontend/nick-derobertis-site/src/styles.scss
+++ b/frontend/nick-derobertis-site/src/styles.scss
@@ -1017,3 +1017,20 @@ button.header-btn {
     width: fit-content;
   }
 }
+
+.timeline-description-card {
+  border-radius: 20px;
+  padding: 8%;
+
+  @include media-breakpoint-up(sm) {
+    padding: 5%;
+  }
+
+  @include media-breakpoint-up(md) {
+    padding: 4%;
+  }
+
+  @include media-breakpoint-up(lg) {
+    padding: 3%;
+  }
+}
