--- a/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.scss
+++ b/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.scss
@@ -26,3 +26,8 @@ google-chart {
   text-align: center;
   margin-top: 0.5rem;
 }
+
+.timeline-description-card ul {
+  margin-top: 0.5rem;
+  margin-block-end: 0;
+}
