Polish pane copy and no timeline message

--- a/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
@@ -65,7 +65,7 @@
         </ul>
       </div>
     </div>
-    <div *ngIf="!model">
+    <div *ngIf="!model" class="no-select-message-wrapper">
       <h5>Please select education or employment to see the timeline</h5>
     </div>
   </div>
