--- a/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-pane.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-pane.component.html
@@ -1,6 +1,6 @@
 <div class="row featurette" id="skills-pane">
   <div class="overview-wrapper" *ngIf="!loading">
-    <h2 class="heading featurette-heading">Positions over Time</h2>
+    <h2 class="heading featurette-heading">Educated and Experienced</h2>
     <p class="lead">Hover over positions in the timeline to learn more.</p>
   </div>
   <nds-loading-spinner *ngIf="loading"></nds-loading-spinner>
