Polish colors in timeline widget

--- a/frontend/nick-derobertis-site/src/styles.scss
+++ b/frontend/nick-derobertis-site/src/styles.scss
@@ -607,6 +607,8 @@ $theme-colors: (
   "tertiary-offset": white,
   "background": #f1e9e9,
   "gold": #e2ca11,
+  "medium-gray": #cac7c7,
+  "light-gray": #e6e6e6,
 );
 
 @import "bootstrap-material/scss/bootstrap-material-design";
@@ -1006,7 +1008,7 @@ button.header-btn {
 .timeline-filters-container {
   justify-content: space-around;
   margin-bottom: 0.5rem;
-  background-color: var(--primary-offset-light);
+  background-color: var(--light-gray);
   border-radius: 10px;
 
   @include media-breakpoint-up(md) {
