--- a/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-pane.component.scss
+++ b/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-pane.component.scss
@@ -2,6 +2,8 @@
   width: 100%;
   text-align: center;
   margin-bottom: 2rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .timeline-wrapper {
