--- a/frontend/nick-derobertis-site/src/app/header/header/header.component.html
+++ b/frontend/nick-derobertis-site/src/app/header/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" routerLink="/">
+    <a class="navbar-brand" routerLink="/" (click)="closeDropdown()">
       <img
         src="https://nickderobertis.github.io/derobertis-project-logo/_images/nick_derobertis_site.svg"
         alt="Nick DeRobertis Logo"
@@ -22,7 +22,11 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <div class="d-contents d-md-block">
-          <a *ngFor="let link of routerLinks" [routerLink]="link.link">
+          <a
+            *ngFor="let link of routerLinks"
+            [routerLink]="link.link"
+            (click)="closeDropdown()"
+          >
             <button
               class="header-btn btn btn-primary scroll-to-top-immediately btn-narrow"
             >
