--- a/frontend/nick-derobertis-site/src/app/research/research-project-pane/research-project-pane.component.html
+++ b/frontend/nick-derobertis-site/src/app/research/research-project-pane/research-project-pane.component.html
@@ -13,5 +13,11 @@
       *ngFor="let category of model.categories"
       [model]="category"
     ></nds-research-category>
+    <div class="research-resources-container">
+      <nds-research-resource
+        *ngFor="let resource of model.resources"
+        [model]="resource"
+      ></nds-research-resource>
+    </div>
   </div>
 </div>
