Add events for clicking research resources

--- a/frontend/nick-derobertis-site/src/app/research/research-resource/research-resource.component.html
+++ b/frontend/nick-derobertis-site/src/app/research/research-resource/research-resource.component.html
@@ -1,1 +1,5 @@
-<li><a href="{{model.url}}">{{model.fullDescription}}</a></li>
+<li><a
+  href="{{model.url}}"
+  ndsClickEvent
+  [event]="model.viewEvent"
+>{{model.fullDescription}}</a></li>
