Update copy for skills pane and add tooltip

--- a/frontend/nick-derobertis-site/src/app/home/skills-pane/skills-pane.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/skills-pane/skills-pane.component.html
@@ -3,7 +3,7 @@
     class="col-md-3 d-flex flex-column justify-content-center"
     *ngIf="!loading"
   >
-    <h2 class="featurette-heading">Highly Skilled in...</h2>
+    <h2 class="featurette-heading">Skilled in...</h2>
     <p class="lead skills-pane-description">
       Browse {{ model?.count }} skills in {{ model?.parentCount }} categories.
       Click the dropdowns to see nested skills.
