--- a/frontend/nick-derobertis-site/src/app/home/home-story/home-story.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/home-story/home-story.component.html
@@ -2,8 +2,10 @@
   <div class="col-md-5 order-md-2">
     <h2 class="featurette-heading">Who am I?</h2>
     <p class="lead">
-      I'm a Finance Ph.D. candidate at the University of Florida. I enjoy the
-      life of a professor while engineering software on the side.
+      I'm a Finance Ph.D. candidate at the University of Florida,
+      graduating in May 2021. I enjoy
+      researching finance topics, engineering software solutions,
+      and sharing my knowledge with the world.
     </p>
     <div class="story-highlight-pane-button-wrapper">
       <a [routerLink]="'story'">
