Change Story to Bio

--- a/frontend/nick-derobertis-site/src/app/home/home-story/home-story.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/home-story/home-story.component.html
@@ -8,9 +8,9 @@
       and sharing my knowledge with the world.
     </p>
     <div class="story-highlight-pane-button-wrapper">
-      <a [routerLink]="'story'">
+      <a [routerLink]="'bio'">
         <button class="btn btn-primary scroll-to-top-immediately btn-raised">
-          View Story
+          View Bio
         </button>
       </a>
     </div>
