--- a/frontend/nick-derobertis-site/src/app/home/skills-pane/skills-pane.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/skills-pane/skills-pane.component.html
@@ -11,6 +11,7 @@
   </div>
   <nds-loading-spinner *ngIf="loading"></nds-loading-spinner>
   <div class="col-md-9">
-    <nds-skills-widget></nds-skills-widget>
+    <nds-skills-chart></nds-skills-chart>
+    <!-- <nds-skills-widget></nds-skills-widget> -->
   </div>
 </div>
