Set skills description based on whether chart or dropdowns are active

--- a/frontend/nick-derobertis-site/src/app/home/skills-pane/skills-pane.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/skills-pane/skills-pane.component.html
@@ -5,8 +5,7 @@
   >
     <h2 class="featurette-heading">Skilled in...</h2>
     <p class="lead skills-pane-description">
-      Browse {{ model?.count }} skills in {{ model?.parentCount }} categories.
-      Click the dropdowns to see nested skills.
+      {{ description }}
     </p>
     <div class="skill-pane-options-wrapper d-flex justify-content-center">
       <div
