Get skill dropdowns vertically centered

--- a/frontend/nick-derobertis-site/src/app/home/skills-pane/skills-pane.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/skills-pane/skills-pane.component.html
@@ -28,7 +28,7 @@
     </div>
   </div>
   <nds-loading-spinner *ngIf="loading"></nds-loading-spinner>
-  <div class="col-md-9">
+  <div class="col-md-9 d-flex flex-column justify-content-around">
     <nds-skills-chart [ngStyle]="chartStyles"></nds-skills-chart>
     <nds-skills-widget [ngStyle]="dropdownStyles"></nds-skills-widget>
   </div>
