Update CV and update CSS to account for docs links not being there on all software cards

--- a/frontend/nick-derobertis-site/src/app/software/software-card/software-card.component.html
+++ b/frontend/nick-derobertis-site/src/app/software/software-card/software-card.component.html
@@ -15,7 +15,7 @@
       {{ model.description }}
     </p>
     <div class="d-flex flex-wrap justify-content-between align-items-center">
-      <div class="btn-group">
+      <div class="btn-group software-card-buttons">
         <a
           *ngIf="model.githubUrl"
           href="{{ model.githubUrl }}"
