Update copy and personal details to reflect graduation and carbon

--- a/frontend/nick-derobertis-site/src/app/research/research-banner/research-banner.component.html
+++ b/frontend/nick-derobertis-site/src/app/research/research-banner/research-banner.component.html
@@ -5,9 +5,9 @@
   <div class="container research-banner-content-container">
     <h1>Research Works</h1>
     <p class="lead">
-      I am a Finance Ph.D. student at the University of Florida currently
-      focusing on market intervention, alternative assets, and behavioral
-      finance. Find my projects here or on my CV.
+      I received a Ph.D. in Finance from the University of Florida and currently
+      focus on market intervention, alternative assets, and behavioral finance.
+      Find my projects here or on my CV.
     </p>
     <p>
       <a href="{{ cvPath }}" ndsClickEvent [event]="viewCVEvent">
