--- a/frontend/nick-derobertis-site/src/app/story/story-page/story-page.component.html
+++ b/frontend/nick-derobertis-site/src/app/story/story-page/story-page.component.html
@@ -19,7 +19,7 @@
       When taking on a project, I always try to learn something new and usually
       develop some tools along the way. In trying to maximize my impact, I have
       open-sourced <a routerLink="/software">many of these tools.</a> My hope is
-      that the net productivity gain to the finance, data science, and web
+      that the net productivity gain to the finance, data science, and software
       development industries from open-sourcing these tools will be far greater
       than the amount of work I could produce alone. If everyone agrees to
       collaborate openly rather than keeping tools or knowledge for themselves
