--- a/frontend/nick-derobertis-site/src/app/software/software-card/software-card.component.html
+++ b/frontend/nick-derobertis-site/src/app/software/software-card/software-card.component.html
@@ -10,34 +10,46 @@
       </h5>
     </div>
   </div>
-  <div class="card-body d-inline-flex flex-column justify-content-between">
+  <div
+    class="card-body d-inline-flex flex-column justify-content-between align-items-center"
+  >
     <p class="card-text">
       {{ model.description }}
     </p>
-    <div class="d-flex flex-wrap justify-content-between align-items-center">
-      <div class="btn-group software-card-buttons">
-        <a
-          *ngIf="model.githubUrl"
-          href="{{ model.githubUrl }}"
-          class="btn btn-sm btn-outline-secondary software-card-github-button d-flex justify-content-between align-items-center"
-          ndsClickEvent
-          [event]="model.viewGithubEvent"
-        >
-          <i class="fab fa-github fa-lg" aria-hidden="true"></i>
-          <div>Github</div>
-        </a>
-        <a
-          *ngIf="model.docsUrl"
-          href="{{ model.docsUrl }}"
-          class="btn btn-sm btn-outline-secondary software-card-docs-button d-flex justify-content-between align-items-center"
-          ndsClickEvent
-          [event]="model.viewDocsEvent"
-        >
-          <i class="fas fa-book fa-lg" aria-hidden="true"></i>
-          <div>Docs</div>
-        </a>
+    <div class="software-buttons-and-badge-container">
+      <div
+        class="d-flex flex-wrap w-100 justify-content-around align-items-center"
+      >
+        <div class="btn-group software-card-buttons">
+          <a
+            *ngIf="model.githubUrl"
+            href="{{ model.githubUrl }}"
+            class="btn btn-sm btn-outline-secondary software-card-button software-card-github-button d-flex justify-content-center align-items-center"
+            ndsClickEvent
+            [event]="model.viewGithubEvent"
+          >
+            <i class="fab fa-github fa-lg" aria-hidden="true"></i>
+            <div>Github</div>
+          </a>
+          <a
+            *ngIf="model.docsUrl"
+            href="{{ model.docsUrl }}"
+            class="btn btn-sm btn-outline-secondary software-card-button software-card-docs-button d-flex justify-content-center align-items-center"
+            ndsClickEvent
+            [event]="model.viewDocsEvent"
+          >
+            <i class="fas fa-book fa-lg" aria-hidden="true"></i>
+            <div>Docs</div>
+          </a>
+        </div>
       </div>
-      <small class="text-muted">{{ model.accentText }}</small>
+      <div class="software-card-badge-container">
+        <span
+          class="badge badge-pill badge-secondary no-color"
+          *ngFor="let accent of model.accentParts"
+          >{{ accent }}</span
+        >
+      </div>
     </div>
   </div>
 </div>
