feat: Update copy for changes to 12/2023

--- a/frontend/nick-derobertis-site/src/app/home/home-story/home-story.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/home-story/home-story.component.html
@@ -2,10 +2,10 @@
   <div class="col-md-5 order-md-2">
     <h2 class="featurette-heading">Who am I?</h2>
     <p class="lead">
-      I am a Senior Software Engineer at Carbon Health Technologies, and a
-      Finance Ph.D. graduate of the University of Florida. I enjoy researching
-      finance topics, engineering software solutions, and sharing my knowledge
-      with the world.
+      I am a serial entrepreneur and UF Finance Ph.D. graduate with a wide
+      variety of skills. Currently I'm working as a CTO, engineer, and product
+      manager across three positions. I enjoy engineering software solutions,
+      researching finance topics, and sharing my knowledge with the world.
     </p>
     <div class="story-highlight-pane-button-wrapper">
       <a [routerLink]="'bio'">
