--- a/frontend/nick-derobertis-site/src/app/story/story-page/story-page.component.html
+++ b/frontend/nick-derobertis-site/src/app/story/story-page/story-page.component.html
@@ -80,7 +80,8 @@
       I spend most of my time researching finance topics, teaching, and building
       these tools, but when I get some extra time I love to work with my hands
       and experience the outdoors. I have been maintaining our family's vehicles
-      since 2009 and take any chance I can get to go hiking or camping.
+      since 2009 and take any chance I can get to go hiking or camping. My wife
+      and I are currently traveling around the U.S. with our cat and dog.
     </div>
   </div>
 </div>
