--- a/frontend/nick-derobertis-site/src/styles.scss
+++ b/frontend/nick-derobertis-site/src/styles.scss
@@ -1053,14 +1053,17 @@ button.header-btn {
 
 .timeline-description-card {
   border-radius: 20px;
+  margin-top: -6rem;
   padding: 8%;
 
   @include media-breakpoint-up(sm) {
     padding: 5%;
+    margin-top: -5.5rem;
   }
 
   @include media-breakpoint-up(md) {
     padding: 4%;
+    margin-top: -5rem;
   }
 
   @include media-breakpoint-up(lg) {
