feat: Improve spacing for timeline view on mobile

--- a/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
@@ -61,7 +61,10 @@
           {{ selectedModel.organization }}
         </h5>
         <h6>{{ selectedModel.role }}</h6>
-        <hr *ngIf="selectedModel.description" />
+        <hr
+          *ngIf="selectedModel.description"
+          class="timeline-description-card-divider"
+        />
         <div>
           <span>{{ selectedModel.beginDateStr }}</span>
           <span> - </span>
