--- a/frontend/nick-derobertis-site/src/styles.scss
+++ b/frontend/nick-derobertis-site/src/styles.scss
@@ -1027,9 +1027,23 @@ button.header-btn {
   }
 }
 
+.timeline-wrapper {
+  width: 100%;
+
+  @include media-breakpoint-up(md) {
+    width: 94%;
+    margin: 3%;
+  }
+}
+
 .timeline-widget-container {
-  border-radius: 70px;
-  padding: 2rem;
+  width: "100%";
+  padding: 1rem;
+
+  @include media-breakpoint-up(sm) {
+    border-radius: 70px;
+    padding: 2rem;
+  }
 
   @include media-breakpoint-up(md) {
     padding: 3rem;
@@ -1054,11 +1068,15 @@ button.header-btn {
 .timeline-description-card {
   border-radius: 20px;
   margin-top: -6rem;
-  padding: 8%;
+  padding: 4%;
+  width: 97vw;
+  margin-left: -3vw;
 
   @include media-breakpoint-up(sm) {
     padding: 5%;
     margin-top: -5.5rem;
+    width: unset;
+    margin-left: unset;
   }
 
   @include media-breakpoint-up(md) {
@@ -1068,5 +1086,12 @@ button.header-btn {
 
   @include media-breakpoint-up(lg) {
     padding: 3%;
+  }
+}
+
+.timeline-description-card-divider {
+  @include media-breakpoint-up(sm) {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
   }
 }
